--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.0.29", features = ["derive"] }
+reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
+
 
 # https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
 [profile.release]
@@ -13,6 +16,10 @@ opt-level = 3
 lto = true
 codegen-units = 1
 incremental = true
+
+[[bin]]
+name = "create-new-day"
+path = "src/create-new-day/main.rs"
 
 [[bin]]
 name = "day1"
