--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.0.29", features = ["derive"] }
 reqwest = { version = "0.11.13", features = ["blocking", "cookie_store", "cookies", "gzip"] }
-
+regex = "1"
 
 # https://fasterthanli.me/articles/why-is-my-rust-build-so-slow
 [profile.release]
@@ -28,3 +28,11 @@ path = "src/day1/solution.rs"
 [[bin]]
 name = "day2"
 path = "src/day2/solution.rs"
+
+[[bin]]
+name = "day3"
+path = "src/day3/solution.rs"
+
+[[bin]]
+name = "day4"
+path = "src/day4/solution.rs"
