day 6 (a bit of cheating)

--- a/2022/Cargo.toml
+++ b/2022/Cargo.toml
@@ -40,3 +40,7 @@ path = "src/day4/solution.rs"
 [[bin]]
 name = "day5"
 path = "src/day5/solution.rs"
+
+[[bin]]
+name = "day6"
+path = "src/day6/solution.rs"
